crates/vize_patina/src/rules/vue/snapshots/vize_patina__rules__vue__no_duplicate_attributes__tests__invalid_duplicate_event_same_modifiers.snap
---
source: crates/vize_patina/src/rules/vue/no_duplicate_attributes.rs
expression: result.diagnostics
---
[
    LintDiagnostic {
        rule_name: "vue/no-duplicate-attributes",
        severity: Error,
        message: "Duplicate attribute 'v-on:click.stop'",
        start: 21,
        end: 36,
        help: Some(
            "Remove the duplicate attribute",
        ),
        labels: [],
        fix: None,
    },
]
