crates/vize_patina/src/rules/vue/snapshots/vize_patina__rules__vue__no_duplicate_attributes__tests__invalid_duplicate_id.snap
---
source: crates/vize_patina/src/rules/vue/no_duplicate_attributes.rs
expression: result.diagnostics
---
[
    LintDiagnostic {
        rule_name: "vue/no-duplicate-attributes",
        severity: Error,
        message: "Duplicate attribute 'id'",
        start: 14,
        end: 22,
        help: Some(
            "Remove the duplicate attribute",
        ),
        labels: [],
        fix: None,
    },
]
